# test-repo

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
test_repo.egg-info/: PKG-INFO  SOURCES.txt
