[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "demo-package"
version = "0.0.0"
description = "A minimal Python package"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"

[tool.setuptools]
packages = ["test_repo"]  # Ensure this matches your actual package directory
