[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test_repo"
version = "0.0.0"
description = "A minimal Python package"
authors = [{ name = "Your Name", email = "viktoriias.afiullina@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"

[tool.setuptools]
packages = ["test_repo"]  # Ensure this matches your actual package directory
